[package]
name = "quantum-purse-key-vault"
version = "0.2.5"
edition = "2021"
description = "A SPHINCS+ key management library for CKB blockchain."
repository = "https://github.com/tea2x/quantum-purse-key-vault.git"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
fips205 = { version ="0.4.1", default-features = false, features = [
        "slh_dsa_sha2_128s",
        "slh_dsa_shake_128s",
        "slh_dsa_sha2_128f",
        "slh_dsa_shake_128f",
        "slh_dsa_sha2_192s",
        "slh_dsa_shake_192s",
        "slh_dsa_sha2_192f",
        "slh_dsa_shake_192f",
        "slh_dsa_sha2_256s",
        "slh_dsa_shake_256s",
        "slh_dsa_sha2_256f",
        "slh_dsa_shake_256f"
    ]}
aes-gcm = { version = "0.10.3", features = ["aes", "zeroize"] }
hex = "0.4.3"
scrypt = { version = "0.11.0", default-features = false }
wasm-bindgen = "0.2.100"
zeroize = "1.8.1"
getrandom = { version = "0.2.15", features = ["js"] }
getrandom_v03 = { package = "getrandom", version = "0.3.3", features = ["wasm_js"] }
bip39 = { version = "2.2.0", features = ["zeroize"] }
web-sys = { version = "0.3.77", features = ["console"] }
indexed_db_futures = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
ckb-fips205-utils = { path = "./crates/ckb-fips205-utils", features = ["signing"] }
serde_json = "1.0.142"
ckb-mock-tx-types = { version = "0.200.0" }